Profile image stretch issues fixed - need to do some R&D

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -1075,7 +1075,7 @@ a.thumbnail, a.custom-large-image-gallery {
 	-moz-box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.2);
 	box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.2);
 	max-width: 200px;
-	max-height: 100%;
+	max-height: 200px;
 	margin-bottom: 8px;
 }
 .social-network-container {
